# db-developments

./: .gitignore  Dockerfile  README.md  devdb.sh  docker-compose.yml  pyproject.toml  version.env
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/ISSUE_TEMPLATE/: update.md
.github/workflows/: PR_Review.yml  (+9 more)
bash/: 01_dataloading.sh  02_build_devdb.sh  03_export.sh  03_qaqc.sh  04_archive.sh  04_export.sh  config.sh  construct_historic_qaqc_summary.sh
data/: CORR_hny_matches.csv  DEPRECATED_housing_input_research.csv  census_units20_block.csv  housing_input_research.csv  lookup_occ.csv  lookup_ownership.csv  manual_corrections.csv
developments_build/: .env.example  01_dataloading.sh  02.1_build_devdb.sh  02.2_geocoding.sh  02.3_build_yoyco.sh  02.4_build_hny.sh  02_build_devdb.sh  03_build_yoyco.sh  03_export.sh  04_archive.sh  04_build_hny.sh  04_export.sh  04_qaqc.sh  05_archive.sh  05_export.sh  06_qaqc.sh  07_archive.sh  _02_build_devdb.sh  config.sh  version.env
docs/: index.html
maintenance/: log.md
output/: qaqc_historic.csv  qaqc_historic.sql
python/: clean_export_aggregate.py  geocode.py  geocode_hny.py  yearly.py
schemas/: schema.json
sql/: _create.sql  _export.sql  _function.sql  _geo.sql  _geo_corrections.sql  _hny.sql  _hny_join.sql  _hny_match.sql  _init.sql  _mid.sql  _occ.sql  _pluto.sql  _spatial.sql  _status.sql  _status_q.sql  _units.sql  aggregate.sql  final.sql  init.sql  mid.sql  qaqc_geo.sql  yearly.sql
templates/: dcp_developments.yml  dcp_housing.yml  dob_jobapplications.yml  dob_permitissuance.yml
(+163 files in other folders)
