[tool.poetry]
name = "db-developments"
version = "0.1.0"
description = ""
authors = ["Sasha Weinstein <70385853+SashaWeinstein@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "3.0.2"
pandas = "1.3.4"
python-geosupport = "1.0.8"
SQLAlchemy = "1.4.27"
utils = "^1.0.1"
requests = "^2.28.1"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
